2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : when service instance is provided to the
	  ServiceHost, do not reject Type-less state.

2009-06-29  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : do not iterate extra channel acceptance
	  and hence close channels a bit more gracefully.

2009-06-25  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : instead of discarding channels, reuse them
	  unless it is closed by session manager (session manager does not
	  work, so channels are not actually closed automatically yet).

2009-06-25  Atsushi Enomoto  <atsushi@ximian.com>

	* SessionInstanceContextProvider.cs : new instance context provider.

2009-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* DispatchRuntime.cs : do not fill InstanceContextProvider here.
	* ChannelDispatcher.cs : do it here instead.
	* ChannelDispatcherCollection.cs : remove TODOs.

2009-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* InputOrReplyRequestProcessor.cs : bogus initialization.

2009-06-18  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : significant changes:
	  - simplified Open/Close async.
	  - implement OnAbort().
	  - create ServiceThrottle when it is null.
	  - Channels are accepted as much as the throttle allows, and
	    process requests when accepted an input (now it holds more than
	    one channel).
	  - Support ReceiveSynchronously and use Begin/EndAcceptChannel()
	    for async pattern.
	  - Close all channels and the listener when it is closed.
	  - Cosmetic simplification on channel acceptor delegate creation.

2009-06-09  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : avoid NRE (actually it should eliminate
	  Thread.Abort()). Added some comments on throttling.

2009-06-09  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceThrottle.cs : implement.

2009-06-08  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs :