@@ -1,3 +1,8 @@
+2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* DispatchRuntime.cs : add ValidateMustUnderstand.
+	* DispatchOperation.cs : add AutoDisposeParameters.
+
 2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ChannelDispatcher.cs : when service instance is provided to the
